[gd_scene load_steps=8 format=3 uid="uid://tbxutibj805n"]

[ext_resource type="Texture2D" uid="uid://bqpre5umo4ki0" path="res://Scenes/UI/PlayerCustomizationMenu/edit.svg" id="1_cnn6n"]
[ext_resource type="Script" uid="uid://velkdm5chkst" path="res://Scenes/UI/PlayerCustomizationMenu/PlayerCustomizationMenu/player_customization_tab.gd" id="1_q1vwm"]
[ext_resource type="PackedScene" uid="uid://byfuym260iolg" path="res://Scenes/UI/PlayerCustomizationMenu/PlayerSprite/player_sprite.tscn" id="3_3n04h"]
[ext_resource type="Texture2D" uid="uid://c4sfyueb41dmc" path="res://Scenes/Player/Eyes/eyes_1.png" id="3_vtim2"]
[ext_resource type="Texture2D" uid="uid://3twdntbapyus" path="res://Scenes/Player/Mouths/mouth_1.png" id="4_spjen"]
[ext_resource type="Texture2D" uid="uid://1jtgnfgq03qx" path="res://Scenes/UI/PlayerCustomizationMenu/close.svg" id="4_whasm"]

[sub_resource type="LabelSettings" id="LabelSettings_nf1j6"]
font_size = 32

[node name="Customization" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_q1vwm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MenuLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Customization"
label_settings = SubResource("LabelSettings_nf1j6")
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 128
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Elements" type="HBoxContainer" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Labels" type="VBoxContainer" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="MainColorLabel" type="Label" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Main color : "

[node name="SecondaryColorLabel" type="Label" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Secondary color : "

[node name="EyesLabel" type="Label" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Eyes : "

[node name="MouthLabel" type="Label" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Mouth : "

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="MainColorPicker" type="ColorPickerButton" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "           "
edit_alpha = false
edit_intensity = false

[node name="SecondaryColorPicker" type="ColorPickerButton" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Buttons"]
layout_mode = 2
text = "           "
edit_alpha = false
edit_intensity = false

[node name="EyesEditButton" type="Button" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Buttons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("1_cnn6n")
icon_alignment = 1
expand_icon = true

[node name="MouthEditButton" type="Button" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Buttons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("1_cnn6n")
icon_alignment = 1
expand_icon = true

[node name="RandomizeButton" type="Button" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Randomize !"

[node name="SpritePreview" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer" instance=ExtResource("3_3n04h")]
layout_mode = 2

[node name="Eyes" type="Control" parent="VBoxContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EyesItems" type="ItemList" parent="VBoxContainer/Control/Eyes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
item_count = 1
max_columns = 8
same_column_width = true
fixed_icon_size = Vector2i(128, 128)
item_0/icon = ExtResource("3_vtim2")

[node name="CloseButton" type="Button" parent="VBoxContainer/Control/Eyes"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
icon = ExtResource("4_whasm")
expand_icon = true

[node name="Mouth" type="Control" parent="VBoxContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MouthItems" type="ItemList" parent="VBoxContainer/Control/Mouth"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
item_count = 1
max_columns = 8
same_column_width = true
fixed_icon_size = Vector2i(128, 128)
item_0/icon = ExtResource("4_spjen")

[node name="CloseButton" type="Button" parent="VBoxContainer/Control/Mouth"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
icon = ExtResource("4_whasm")
expand_icon = true

[connection signal="color_changed" from="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Buttons/MainColorPicker" to="." method="_on_main_color_picker_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Buttons/SecondaryColorPicker" to="." method="_on_secondary_color_picker_color_changed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Buttons/EyesEditButton" to="." method="_on_eyes_edit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/Elements/Buttons/MouthEditButton" to="." method="_on_mouth_edit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/VBoxContainer/HBoxContainer/VBoxContainer/RandomizeButton" to="." method="_on_randomize_button_pressed"]
[connection signal="item_activated" from="VBoxContainer/Control/Eyes/EyesItems" to="." method="_on_eyes_items_item_activated"]
[connection signal="pressed" from="VBoxContainer/Control/Eyes/CloseButton" to="." method="_on_eyes_close_button_pressed"]
[connection signal="item_activated" from="VBoxContainer/Control/Mouth/MouthItems" to="." method="_on_mouth_items_item_activated"]
[connection signal="pressed" from="VBoxContainer/Control/Mouth/CloseButton" to="." method="_on_mouth_close_button_pressed"]
